--- a/mc/mc.csproj
+++ b/mc/mc.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>mc</AssemblyName>
+    <RootNamespace>Minsk</RootNamespace>
   </PropertyGroup>
 
 </Project>
