--- a/mc/mc.csproj
+++ b/mc/mc.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Minsk</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Minsk\Minsk.csproj" />
+  </ItemGroup>
+
 </Project>
