--- a/mi/mi.csproj
+++ b/mi/mi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>mc</AssemblyName>
+    <AssemblyName>mi</AssemblyName>
     <RootNamespace>Minsk</RootNamespace>
   </PropertyGroup>
 
