--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/mc/bin/Debug/netcoreapp3.1/mc.dll",
+            "program": "${workspaceFolder}/mi/bin/Debug/netcoreapp3.1/mi.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/mc",
+            "cwd": "${workspaceFolder}/mi",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "externalTerminal",
             "stopAtEntry": false
