--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -2,24 +2,38 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 variables:
-  buildConfiguration: 'Release'
+  configuration: 'Release'
 
 steps:
-- task: CmdLine@2
+- task: DotNetCoreCLI@2
   displayName: '.NET build'
   inputs:
-    script: 'dotnet build --configuration $(buildConfiguration)'
-- task: CmdLine@2
+    command: 'build'
+    projects: '**/*.csproj'
+    arguments: '--configuration $(configuration)'
+- task: DotNetCoreCLI@2
   displayName: '.NET test'
-  enabled: false
   inputs:
-    script: 'dotnet test "./Minsk.Tests/Minsk.Tests.csproj" --logger "xunit;LogFileName=TestResults.xml"'
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(configuration) --logger "xunit;LogFileName=TestResults.xml" --collect "Code coverage"'
 - task: PublishTestResults@2
   displayName: 'Publish test results'
-  enabled: false
+  condition: succeededOrFailed()
   inputs:
     testResultsFormat: 'xUnit'
     testResultsFiles: '**/TestResults.xml'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: 'mi/mi.csproj'
+    arguments: '--configuration $(configuration) --output $(Build.ArtifactStagingDirectory)'
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    artifact: 'drop'
+    publishLocation: 'pipeline'
