--- a/src/Minsk.Tests/Minsk.Tests.csproj
+++ b/src/Minsk.Tests/Minsk.Tests.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
