--- a/src/Minsk.TestConsole/Minsk.Console.csproj
+++ b/src/Minsk.TestConsole/Minsk.Console.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>mi</AssemblyName>
+    <TargetFrameworks>net461;netcoreapp3.1;net6.0</TargetFrameworks>
+    <AssemblyName>Minsk.TConsole</AssemblyName>
     <RootNamespace>Minsk</RootNamespace>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
