--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,4 +1,6 @@
 <Project>
   <PropertyGroup>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageOutputPath>$(MSBuildThisFileDirectory)/artifacts</PackageOutputPath>
   </PropertyGroup>
 </Project>
