--- a/src/Minsk.TestConsole/Minsk.Console.csproj
+++ b/src/Minsk.TestConsole/Minsk.Console.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net461;netcoreapp3.1;net6.0</TargetFrameworks>
-    <AssemblyName>Minsk.TConsole</AssemblyName>
-    <RootNamespace>Minsk</RootNamespace>
+    <RootNamespace>Minsk.Console</RootNamespace>
+    <AssemblyName>Minsk.Console</AssemblyName>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Minsk\Minsk.csproj" />
+    <PackageReference Include="Minsk.Compiler" Version="1.0.1-beta1" />
   </ItemGroup>
 
 </Project>
