--- a/src/Minsk.Tests/Minsk.Tests.csproj
+++ b/src/Minsk.Tests/Minsk.Tests.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461;netcoreapp3.1;net6.0</TargetFrameworks>
+    <RootNamespace>Minsk.Tests</RootNamespace>
+    <AssemblyName>Minsk.Tests</AssemblyName>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
