--- a/src/Minsk/Minsk.csproj
+++ b/src/Minsk/Minsk.csproj
@@ -4,16 +4,20 @@
     <TargetFrameworks>net461;netstandard2.0;net6.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
+    <RootNamespace>Minsk</RootNamespace>
+    <AssemblyName>Minsk</AssemblyName>
+    
     <!-- version numbers will be updated by build -->
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.1</FileVersion>
     <VersionPrefix>1.0.1</VersionPrefix>
     <VersionSuffix>beta1</VersionSuffix>
+    
     <Authors>Alberto Spelta</Authors>
     <Product>Minsk Compiler</Product>
     <Description>Building a compiler in C#</Description>
-    <Copyright>Copyright © 2022</Copyright>
+    <Copyright>No copyright © 2022</Copyright>
     <Summary>Building a compiler in C# uses many of the concepts that you can find in the Microsoft C# and Visual Basic compilers, code named Roslyn</Summary>
     <NeutralLanguage>en-US</NeutralLanguage>
     <Title>Minsk</Title>
@@ -24,15 +28,31 @@
     <PackageIconUrl>https://raw.githubusercontent.com/albertospelta/minsk/master/src/Minsk/Assets/minsk.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/albertospelta/minsk</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Deterministic>true</Deterministic>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <!--
+      Package Validation
+      https://devblogs.microsoft.com/dotnet/package-validation/
+    <EnablePackageValidation>true</EnablePackageValidation>
+    <PackageValidationBaselineVersion>13.0.1</PackageValidationBaselineVersion>
+    -->
   </PropertyGroup>
   
   <ItemGroup>
+    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" />
     <None Include="icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
