--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,7 +2,7 @@
 <configuration>
     <packageSources>
         <clear />
-        <add key="local" value="./artifacts" />
+        <!--add key="local" value="./artifacts" /-->
         <add key="NuGet.org (v3)" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
 </configuration>
