--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,16 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
-#    paths:
-#    - '**.cs'
-#    - '**.csproj'
+      - master
+#   paths:
+#   - '**.cs'
+#   - '**.csproj'
   workflow_dispatch:
 env:
-    CONFIGURATION: 'Release'
+  CONFIGURATION: 'Release'
 jobs:
   build-and-test:
     name: build-and-test--${{ matrix.os-version }}
@@ -21,15 +21,17 @@ jobs:
         os-version: [windows-latest] #, ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
-      - name: dotnet setup
+      - name: .NET setup
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
-      - name: dotnet info
+      - name: .NET info
         run: dotnet --info
-      - name: dotnet restore
+      - name: .NET restore
         run: dotnet restore ./src
-      - name: dotnet build
-        run: dotnet build ./src/Minsk.sln --no-restore
-      - name: dotnet test
-        run: dotnet test ./src/Minsk.Tests/Minsk.Tests.csproj --no-build --verbosity normal
+      - name: .NET build
+        run: dotnet build ./src/Minsk.sln --configuration ${{ env.CONFIGURATION }} --no-restore
+      - name: .NET test
+        run: dotnet test ./src/Minsk.Tests/Minsk.Tests.csproj --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      - name: .NET pack
+        run: dotnet pack ./src/Minsk/Minsk.csproj --configuration ${{ env.CONFIGURATION }} --no-build --no-restore --verbosity normal
