--- a/src/Minsk/Minsk.csproj
+++ b/src/Minsk/Minsk.csproj
@@ -10,9 +10,9 @@
     
     <!-- version numbers will be updated by build -->
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
-    <VersionPrefix>1.0.1</VersionPrefix>
-    <VersionSuffix>beta1</VersionSuffix>
+    <FileVersion>1.0.0</FileVersion>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>dev</VersionSuffix>
     
     <Authors>Alberto Spelta</Authors>
     <Product>Minsk Compiler</Product>
@@ -24,10 +24,11 @@
     <PackageId>Minsk.Compiler</PackageId>
     <PackageTags>c-sharp;compiler;dotenet</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageIcon>package-icon.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/albertospelta/minsk/master/src/Minsk/Assets/minsk.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/albertospelta/minsk</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/albertospelta/minsk</RepositoryUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
@@ -45,7 +46,7 @@
   <ItemGroup>
     <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\" />
     <None Include="..\..\README.md" Pack="true" PackagePath="\" />
-    <None Include="icon.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\package-icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
