--- a/src/Minsk/Minsk.csproj
+++ b/src/Minsk/Minsk.csproj
@@ -13,14 +13,14 @@
     <FileVersion>1.0.0</FileVersion>
     <VersionPrefix>1.0.0</VersionPrefix>
     <VersionSuffix>dev</VersionSuffix>
-    
+
+    <Title>Minsk.Compiler</Title>
     <Authors>Alberto Spelta</Authors>
-    <Product>Minsk Compiler</Product>
+    <Product>Minsk compiler</Product>
     <Description>Building a compiler in C#</Description>
     <Copyright>No copyright © 2022</Copyright>
     <Summary>Building a compiler in C# uses many of the concepts that you can find in the Microsoft C# and Visual Basic compilers, code named Roslyn</Summary>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <Title>Minsk</Title>
     <PackageId>Minsk.Compiler</PackageId>
     <PackageTags>c-sharp;compiler;dotenet</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -57,5 +57,16 @@
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <DefineConstants>$(AdditionalConstants)</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <AssemblyTitle>Minsk.Compiler .NET Standard 2.0</AssemblyTitle>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <AssemblyTitle>Minsk.Compiler .NET 6.0</AssemblyTitle>
+  </PropertyGroup>
 
 </Project>
