--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -31,7 +31,7 @@ steps:
       Write-Host "VersionSuffix $versionSuffix"
       $packageVersion = "$(semanticVersion)$versionSuffix"
       if ("$(isReleaseBuild)" -ne "true") { $packageVersion += "-CI-$(Build.BuildNumber)" }
-      Write-Host "PackageVersion $packageVersion"
+      Write-Host "Set PackageVersion and BuildNumber to '$packageVersion'"
       Write-Host "##vso[task.setvariable variable=packageVersion;]$packageVersion"
       Write-Host "##vso[build.updatebuildnumber]$packageVersion"
 - task: DownloadSecureFile@1
