--- a/src/Minsk/Minsk.csproj
+++ b/src/Minsk/Minsk.csproj
@@ -42,12 +42,11 @@
     <PackageValidationBaselineVersion>13.0.1</PackageValidationBaselineVersion>
     -->
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\" />
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
-    <None Include="..\..\package-icon.png" Pack="true" PackagePath="\" />
-    <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="..\..\LICENSE.md" Visible="false" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Visible="false" Pack="true" PackagePath="\" />
+    <None Include="..\..\assets\package-icon.png" Visible="false" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
